# aiccountant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_identity.py  0002_ledger.py  0003_recurring.py  0004_recurring_optional_category.py  0005_imports.py  0006_categorization.py
backend/app/: logging.py  main.py
backend/app/ai/: client.py
backend/app/core/: celery_app.py  csrf.py  db.py  log_context.py  money.py  redis.py  settings.py
backend/app/identity/: deps.py  models.py  router.py  schemas.py  service.py  sessions.py
backend/app/imports/: models.py  parser.py  repository.py  router.py  schemas.py  service.py
backend/app/ledger/: categorization.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/recurring/: models.py  repository.py  router.py  schedule.py  schemas.py  service.py  tasks.py
backend/scripts/: eval_categorize.py
backend/tests/: conftest.py  fixtures.py  test_accounts_api.py  test_ai_client.py  test_auth_api.py  test_categories_api.py  test_categorization.py  test_categorize_api.py  test_categorize_eval.py  test_categorize_repository.py  test_categorize_trigger.py  test_celery_bootstrap.py  test_csrf.py  test_dashboard_api.py  test_import_dedup_service.py  test_imports_api.py  test_log_context.py  test_members_api.py  test_migrations.py  test_recurring_beat.py  test_recurring_isolation.py  test_recurring_occurrences_api.py  test_recurring_rules_api.py  test_recurring_schedule.py  test_security.py  test_sessions.py  test_settings.py  test_statement_parser.py  test_transactions_api.py  test_workspace_isolation.py
backend/tests/data/: categorize_eval.json
docs/superpowers/plans/: 2026-07-02-etap-0-fundament.md  2026-07-03-etap-1-identity.md  2026-07-03-etap-1.2a-ledger-core.md  2026-07-08-etap-1.2b1-recurring.md  2026-07-09-etap-1.2b2-imports.md  2026-07-09-etap-2a-autocategorization.md  2026-07-09-optional-category.md
docs/superpowers/specs/: 2026-07-02-aiccountant-design.md  2026-07-02-moneyrain-design.md  2026-07-03-etap-1.2a-ledger-core-design.md  2026-07-08-etap-1.2b1-recurring-design.md  2026-07-09-etap-1.2b2-imports-design.md  2026-07-09-etap-2a-autocategorization-design.md  2026-07-09-optional-category-design.md
frontend/: Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  AppLayout.tsx  AuthGuard.test.tsx  AuthGuard.tsx  WorkspaceGate.tsx  main.tsx  test-setup.ts
frontend/src/api/: auth.ts  client.ts  imports.ts  ledger.ts  recurring.ts
frontend/src/lib/: money.test.ts  money.ts  schedule.test.ts  schedule.ts
frontend/src/pages/: AccountsPage.tsx  CategoriesPage.tsx  CategoryCell.test.tsx  CategoryCell.tsx  DashboardPage.tsx  HomePage.tsx  ImportPage.tsx  ImportPreviewPanel.test.tsx  ImportPreviewPanel.tsx  LoginPage.test.tsx  LoginPage.tsx  RecurringPage.tsx  RecurringRuleForm.tsx  RegisterPage.tsx  TransactionForm.test.tsx  TransactionForm.tsx  TransactionsPage.tsx  TransferForm.tsx
frontend/src/store/: workspace.ts
infra/: Caddyfile
