[project]
name = "aiccountant-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "structlog",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "pydantic-settings>=2.14.2",
    "argon2-cffi>=25.1.0",
    "redis>=8.0.1",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "testcontainers[postgres,redis]>=4.14.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
packages = ["app", "tests"]
plugins = ["pydantic.mypy"]

# testcontainers не поставляет типы для этих подмодулей (нет py.typed)
[[tool.mypy.overrides]]
module = ["testcontainers.postgres", "testcontainers.redis"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
