[project]
name = "aiccountant-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "structlog",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "pydantic-settings>=2.14.2",
    "argon2-cffi>=25.1.0",
    "redis>=5.0.1,<6.5",
    "email-validator>=2.3.0",
    "celery[redis]>=5.4",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "testcontainers[postgres]>=4.14.2",
    "import-linter",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
packages = ["app", "tests"]
plugins = ["pydantic.mypy"]

# testcontainers не поставляет типы для этих подмодулей (нет py.typed)
[[tool.mypy.overrides]]
module = ["testcontainers.postgres", "testcontainers.redis"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "ledger service/repository не зависят от identity"
type = "forbidden"
source_modules = ["app.ledger.service", "app.ledger.repository"]
forbidden_modules = ["app.identity"]

[[tool.importlinter.contracts]]
name = "identity не зависит от ledger"
type = "forbidden"
source_modules = ["app.identity.service", "app.identity.models", "app.identity.deps"]
forbidden_modules = ["app.ledger"]
