[project]
name = "aiccountant-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "structlog",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "pydantic-settings>=2.14.2",
    "argon2-cffi>=25.1.0",
    "redis>=5.0.1,<6.5",
    "email-validator>=2.3.0",
    "celery[redis]>=5.4",
    "pypdf>=5.1",
    "python-multipart>=0.0.9",
    "openai>=1.55",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "testcontainers[postgres]>=4.14.2",
    "import-linter",
    "reportlab>=4.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
packages = ["app", "tests"]
plugins = ["pydantic.mypy"]

# testcontainers не поставляет типы для этих подмодулей (нет py.typed)
[[tool.mypy.overrides]]
module = ["testcontainers.postgres", "testcontainers.redis"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pypdf", "pypdf.*", "reportlab", "reportlab.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "ledger service/repository не зависят от identity"
type = "forbidden"
source_modules = ["app.ledger.service", "app.ledger.repository"]
forbidden_modules = ["app.identity"]
# app.ledger.tasks легально импортирует core.celery_app (bootstrap воркера),
# а тот регистрирует ORM-модели всех модулей для metadata — это инфраструктура,
# не обход границы; транзитивный путь ledger.service → tasks → celery_app → identity
# игнорируем на этом ребре.
ignore_imports = ["app.ledger.tasks -> app.core.celery_app"]

[[tool.importlinter.contracts]]
name = "identity не зависит от ledger"
type = "forbidden"
source_modules = ["app.identity.service", "app.identity.models", "app.identity.deps"]
forbidden_modules = ["app.ledger"]

[[tool.importlinter.contracts]]
name = "recurring не лезет во внутренности identity и ledger"
type = "forbidden"
source_modules = ["app.recurring.service", "app.recurring.repository", "app.recurring.tasks"]
forbidden_modules = ["app.identity", "app.ledger.repository", "app.ledger.models"]
# recurring.service легально зовёт ledger.service, а тот сам импортирует
# ledger.repository/ledger.models — это не обход барьера, поэтому транзитивную
# цепочку через публичный интерфейс ledger игнорируем и проверяем только
# прямые импорты из recurring. Аналогично recurring.tasks легально импортирует
# core.celery_app (bootstrap воркера), а тот регистрирует ORM-модели всех
# модулей для metadata — это инфраструктура, не обход границы.
ignore_imports = [
    "app.recurring.service -> app.ledger.service",
    "app.recurring.tasks -> app.core.celery_app",
]

[[tool.importlinter.contracts]]
name = "identity и ledger не зависят от recurring"
type = "forbidden"
source_modules = [
    "app.identity.service", "app.identity.models", "app.identity.deps",
    "app.ledger.service", "app.ledger.repository", "app.ledger.models",
]
forbidden_modules = ["app.recurring"]
# та же причина: ledger.service → tasks → celery_app → recurring.models — это
# регистрация моделей в celery_app, а не доменная зависимость ledger от recurring.
ignore_imports = ["app.ledger.tasks -> app.core.celery_app"]

[[tool.importlinter.contracts]]
name = "imports не лезет во внутренности identity и ledger"
type = "forbidden"
source_modules = ["app.imports.service", "app.imports.repository", "app.imports.parser"]
forbidden_modules = ["app.identity", "app.ledger.repository", "app.ledger.models"]
ignore_imports = ["app.imports.service -> app.ledger.service"]

[[tool.importlinter.contracts]]
name = "identity и ledger не зависят от imports"
type = "forbidden"
source_modules = [
    "app.identity.service", "app.identity.models", "app.identity.deps",
    "app.ledger.service", "app.ledger.repository", "app.ledger.models",
]
forbidden_modules = ["app.imports"]

[[tool.importlinter.contracts]]
name = "ai не зависит от доменных модулей"
type = "forbidden"
source_modules = ["app.ai"]
forbidden_modules = [
    "app.identity", "app.ledger", "app.imports", "app.recurring",
]
